--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "node server.js",
     "build": "vite build",
+    "devStart": "nodemon server.js",
     "preview": "vite preview",
     "minify": "terser src/composables/userParams.js -c -m --output src/composables/userParams.min.js",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "terser": "^5.31.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -23,6 +29,7 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "vite": "^5.2.8"
   }
