Add some styles | Display connected users in room | Display host name retrived from the server

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "minify": "terser src/composables/userParams.js -c -m --output src/composables/userParams.min.js",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/ server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
